# guiarstr

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  guiarstr.pc  guiarstr.pc.in  test_install.c
.github/: SECURITY.advisory-template.yml
.github/workflows/: c-cpp.yml
examples/: usage.c
include/: guiarstr.h
src/: guiarstr.c
tests/: main.c
